# Vinox

./: Cargo.toml
vinox_client/: Cargo.toml
vinox_client/assets/: player.glb
vinox_client/assets/shaders/: crt.wgsl  psx.wgsl  shader.wgsl
vinox_client/src/: app.rs  commands.rs  game.rs  ggez_state.rs  input.rs  lib.rs  main.rs
vinox_client/src/network/: state.rs
vinox_client/src/render/: model.rs  state.rs
vinox_client/src/scene/: mod.rs
vinox_client/src/scene/game/: mod.rs
vinox_client/src/scene/menu/: mod.rs
vinox_client/src/state/: mod.rs
vinox_client/src/systems/: events.rs  startup.rs
vinox_client/src/ui/: mod.rs
vinox_common/: Cargo.toml
vinox_common/src/: lib.rs  protocol.rs
vinox_common/src/protocol/: marker.rs  position.rs
vinox_formats/: Cargo.toml
vinox_generation/: Cargo.toml
vinox_server/: Cargo.toml
vinox_server/src/: app.rs  game.rs  main.rs
vinox_server/src/network/: state.rs
vinox_server/src/systems/: events.rs  startup.rs  tick.rs
