[package]
name = "vinox_client"
version = "0.1.0"
edition = "2021"
default-run = "client"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
fixed.workspace = true
renet.workspace = true
glam.workspace = true
ggez = { git = "https://github.com/vixeliz/ggez", branch = "devel" }
ggez_atlas = { git = "https://github.com/vixeliz/ggez_atlas" }
vinox_common = { path = "../vinox_common" }
hecs = { version = "0.10" }
log = { version = "0.4" }
cfg-if = { version = "1.0" }