[package]
name = "vinox_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed.workspace = true
derive_more.workspace = true
serde.workspace = true
renet.workspace = true
mint.workspace = true
glam.workspace = true
cfg-if = { version = "1.0" }
log = { version = "0.4" }
# In common cause server and client shouldn't deal with sqlite itself at all. Most of the time the server is the only one using sqlite
rusqlite = { version = "0.29.0", features = ["bundled"] } 
