[package]
name = "vinox_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vinox_common = { path = "../vinox_common" }
log = { version = "0.4" }
simple_logger = { version = "4.0", default-features = false, features = ["timestamps"] }
smol = { version = "1.3" }
hecs = { version = "0.10" }
fixed-macro.workspace = true
renet.workspace = true
